# realtime-api

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
docs/: GETTING_STARTED.md
realtime-api/: ContentView.swift  Item.swift  realtime_apiApp.swift
realtime-api.xcodeproj/: project.pbxproj
realtime-api.xcodeproj/xcuserdata/ali.xcuserdatad/xcschemes/: xcschememanagement.plist
realtime-api/Models/: Conversation.swift  ConversationMessage.swift
realtime-api/Services/: TokenService.swift  VoicePreferencesService.swift
realtime-api/Tools/: GetCurrentTimeTool.swift  GetDeviceInfoTool.swift  GetWeatherTool.swift  ToolRegistry.swift
realtime-api/ViewModels/: ConversationViewModel.swift
realtime-api/Views/: ConversationDetailView.swift  ConversationView.swift  SettingsView.swift
