[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.125.0",
    "httpx>=0.28.1",
    "openai>=2.13.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
